--- a/NorthWind.DAO/NorthWind.DAO.csproj
+++ b/NorthWind.DAO/NorthWind.DAO.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{51FF19D0-ADCA-4AEB-A13D-569471DF68A0}</ProjectGuid>
+    <ProjectGuid>{E2D3A849-0755-4298-8359-766839FF7A18}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NorthWind.Entity</RootNamespace>
-    <AssemblyName>NorthWind.Entity</AssemblyName>
+    <RootNamespace>NorthWind.DAO</RootNamespace>
+    <AssemblyName>NorthWind.DAO</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,15 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CabDocumentoBE.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="Class2.cs" />
-    <Compile Include="DocumentoBE.cs" />
-    <Compile Include="GlobalTypes.cs" />
-    <Compile Include="ItemBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TbClienteBE.cs" />
-    <Compile Include="TbProductoBE.cs" />
+    <Compile Include="TbClienteDAO.cs" />
+    <Compile Include="TbDocumentoDAO.cs" />
+    <Compile Include="TbProductoDAO.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NorthWind.Entity\NorthWind.Entity.csproj">
+      <Project>{51ff19d0-adca-4aeb-a13d-569471df68a0}</Project>
+      <Name>NorthWind.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
